--- a/app/components/star-rating.hbs
+++ b/app/components/star-rating.hbs
@@ -2,11 +2,12 @@
   {{yield this.stars}}
 {{else}}
   {{#each this.stars as |star|}}
-    <FaIcon
-      @icon="star"
-      @prefix={{if star.full "fas" "far"}}
-      {{on 'click' (fn @onUpdate star.rating)}}
-    />
+    <button type="button" {{on 'click' (fn @onUpdate star.rating)}}>
+      <FaIcon
+        @icon="star"
+        @prefix={{if star.full "fas" "far"}}
+      />
+    </button>
   {{/each}}
 {{/if}}
 
