feat: ch9 - backend API calls, service update

--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -9,7 +9,7 @@
           <StarRating
             @maxRating="5"
             @rating={{song.rating}}
-            @onUpdate={{set song "rating"}}
+            @onUpdate={{fn this.updateRating song}}
           />
 
 {{!--          <StarRating--}}
