--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -2,15 +2,7 @@
 
 <div class="w-1/3 px-2">
   <ul class="pl-2 pr-8">
-    {{#each @model as |band|}}
-      <li class="mb-2">
-        <LinkTo
-          @route="bands.band.songs"
-          @model={{band.id}}>
-          {{band.name}}
-        </LinkTo>
-      </li>
-    {{/each}}
+    <BandList @bands={{@model}} />
   </ul>
   <LinkTo
     @route="bands.new"
